# seiryo-sunspot-app

./: .editorconfig  .gitignore  .prettierrc.toml  README.md  biome.jsonc  build.js  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tasks.py  tsconfig.json  vite.config.ts
api/: main.py  utils.py
api/libs/: agg.py  butterfly.py  butterfly_config.py  butterfly_draw.py  butterfly_image.py  butterfly_merge.py  butterfly_trim.py  check_file.py  observations.py  observations_config.py  sunspot_number.py  sunspot_number_config.py  sunspot_number_with_flare.py  sunspot_number_with_flare_config.py  sunspot_number_with_silso.py  sunspot_number_with_silso_config.py  utils.py
api/models/: config.py  draw.py
api/routers/: agg.py  butterfly.py  check.py  observations.py  sunspot_number.py  sunspot_number_with_flare.py  sunspot_number_with_silso.py  utils.py
api/tasks/: butterfly.py  observations.py  sunspot_number.py  sunspot_number_with_flare.py  sunspot_number_with_silso.py
api/tests/: test_libs_agg.py  test_libs_butterfly.py  test_libs_butterfly_draw.py  test_libs_butterfly_fromtext.py  test_libs_butterfly_image.py  test_libs_butterfly_merge.py  test_libs_butterfly_trim.py  test_libs_check_data.py  test_libs_check_file.py  test_libs_obs_calendar.py  test_libs_obs_days.py  test_libs_observations_calendar.py  test_libs_observations_days.py  test_libs_sunspot_number.py  test_libs_sunspot_number_with_flare.py  test_libs_sunspot_number_with_silso.py
app/: app.svelte  index.html  main.ts  style.css
app/api/: config.ts  draw.ts  files.ts  fonts.ts
app/components/: accordion.svelte  alert.svelte  confirm_dialog.svelte  container.svelte  date_select.svelte  file_select.svelte  filter.svelte  interval_select.svelte  ordered_file_select.svelte  preview_form.svelte  save_form.svelte  scroll_box.svelte  tab.svelte
app/constants/: format_list.json  line_list.json  marker_list.json
app/pages/: agg.svelte  home.svelte
scripts/: start.bat
(+127 files in other folders)
