[tool.poetry]
name = "seiryo-sunspot-app"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
fastapi = "^0.111.0"
pydantic = "^2.7.1"
polars = { extras = ["numpy"], version = "^1.0.0" }
matplotlib = "^3.9.0"
python-dateutil = "^2.9.0"
more-itertools = "^10.3.0"
numpy = "^2.0.0"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"
nkf = "^1.0.4"

[tool.poetry.group.dev.dependencies]
invoke = "*"
ruff = "*"
mypy = "*"
types-python-dateutil = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "^3.14.0"

[tool.ruff]
src = ["."]
target-version = "py310"
line-length = 79
output-format = "grouped"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812", # missing-trailing-comma
  "ISC001", # single-line-implicit-string-concatenation
  "D",      # pydocstyle
  "T20",    # flake8-print
  "INP",    # flake8-no-pep420
  "PD",     # pandas-vet
]
unfixable = [
  "ERA", # eradicate
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.per-file-ignores]
"api/tests/*.py" = [
  "S101",    # assert
  "FBT001",  # boolean-type-hint-positional-argument
  "PLR0913", # too-many-arguments
  "PLR2004", # magic-value-comparison
]

[tool.mypy]
python_version = "3.10"
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "api"
addopts = [
  "--import-mode=importlib",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
branch = true
omit = ["api/tests/*"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

[tool.pyright]
pythonVersion = "3.10"
exclude = [".venv"]
venvPath = "."
venv = ".venv"
